// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`!dnrKeys.includes(chargeKey) 1`] = `
<div
  className=" fee_box flex-none layout-row layout-wrap layout-align-center-center"
>
  <div
    className=" flex-none layout-row layout-wrap layout-align-center-start"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="flex-95 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row"
      >
        <div
          className="flex-50 layout-row layout-align-start-center"
        >
          <TextHeading
            color=""
            size={4}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-40 layout-row layout-align-end-center"
        >
          <p
            className="toggle_on flex-none five_m"
          >
            Import
          </p>
          <p />
          <Toggle
            icons={
              Object {
                "checked": <Unknown />,
                "unchecked": <Unknown />,
              }
            }
            onChange={[Function]}
          />
          <p
            className="toggle_off flex-none five_m"
          >
            Export
          </p>
        </div>
        <div
          className="flex-10 layout-row layout-align-end-center"
          onClick={[Function]}
        >
          <i
            className="fa fa-pencil clip flex-none"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-wrap"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="flex-100 layout-row layout-align-none-center layout-wrap expand_panel"
        >
          <div
            className="flex-100 layout-row layout-align-start-center price_subheader"
          >
            <p
              className="flex-none"
            >
              currency
               - 
            </p>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-center"
          >
            <div
              className="flex-25 layout-row layout-align-none-center layout-wrap price_cell"
            >
              <p
                className="flex-100"
              />
              <p
                className="flex"
              >
                FOO
                 
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-align-center-center layout-wrap add_hub_fee_panel hub_fee_panel_closed"
    >
      <div
        className="flex-none layout-row layout-align-center-center panel_close"
        onClick={[Function]}
      >
        <i
          className="fa fa-times clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
      <div
        className="flex-90 layout-row layout-wrap layout-align-start-start"
      />
    </div>
  </div>
  <style>
    
      .react-toggle--checked .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          #333 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          #fafafa 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
  </style>
</div>
`;

exports[`chargeKey === currency 1`] = `
<div
  className=" fee_box flex-none layout-row layout-wrap layout-align-center-center"
>
  <div
    className=" flex-none layout-row layout-wrap layout-align-center-start"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="flex-95 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row"
      >
        <div
          className="flex-50 layout-row layout-align-start-center"
        >
          <TextHeading
            color=""
            size={4}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-40 layout-row layout-align-end-center"
        >
          <p
            className="toggle_on flex-none five_m"
          >
            Import
          </p>
          <p />
          <Toggle
            icons={
              Object {
                "checked": <Unknown />,
                "unchecked": <Unknown />,
              }
            }
            onChange={[Function]}
          />
          <p
            className="toggle_off flex-none five_m"
          >
            Export
          </p>
        </div>
        <div
          className="flex-10 layout-row layout-align-end-center"
          onClick={[Function]}
        >
          <i
            className="fa fa-pencil clip flex-none"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-wrap"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="flex-100 layout-row layout-align-none-center layout-wrap expand_panel"
        >
          <div
            className="flex-100 layout-row layout-align-start-center price_subheader"
          >
            <p
              className="flex-none"
            >
              currency
               - 
            </p>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-center"
          />
        </div>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-align-center-center layout-wrap add_hub_fee_panel hub_fee_panel_closed"
    >
      <div
        className="flex-none layout-row layout-align-center-center panel_close"
        onClick={[Function]}
      >
        <i
          className="fa fa-times clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
      <div
        className="flex-90 layout-row layout-wrap layout-align-start-start"
      />
    </div>
  </div>
  <style>
    
      .react-toggle--checked .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          #333 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          #fafafa 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
  </style>
</div>
`;

exports[`chargeKey === expiration_date 1`] = `
<div
  className=" fee_box flex-none layout-row layout-wrap layout-align-center-center"
>
  <div
    className=" flex-none layout-row layout-wrap layout-align-center-start"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="flex-95 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row"
      >
        <div
          className="flex-50 layout-row layout-align-start-center"
        >
          <TextHeading
            color=""
            size={4}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-40 layout-row layout-align-end-center"
        >
          <p
            className="toggle_on flex-none five_m"
          >
            Import
          </p>
          <p />
          <Toggle
            icons={
              Object {
                "checked": <Unknown />,
                "unchecked": <Unknown />,
              }
            }
            onChange={[Function]}
          />
          <p
            className="toggle_off flex-none five_m"
          >
            Export
          </p>
        </div>
        <div
          className="flex-10 layout-row layout-align-end-center"
          onClick={[Function]}
        >
          <i
            className="fa fa-pencil clip flex-none"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-wrap"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="flex-100 layout-row layout-align-none-center layout-wrap expand_panel"
        >
          <div
            className="flex-100 layout-row layout-align-start-center price_subheader"
          >
            <p
              className="flex-none"
            >
              currency
               - 
            </p>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-center"
          >
            <div
              className="flex-25 layout-row layout-align-none-center layout-wrap price_cell"
            >
              <p
                className="flex-100"
              />
              <p
                className="flex"
              >
                11
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-align-center-center layout-wrap add_hub_fee_panel hub_fee_panel_closed"
    >
      <div
        className="flex-none layout-row layout-align-center-center panel_close"
        onClick={[Function]}
      >
        <i
          className="fa fa-times clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
      <div
        className="flex-90 layout-row layout-wrap layout-align-start-start"
      />
    </div>
  </div>
  <style>
    
      .react-toggle--checked .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          #333 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          #fafafa 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
  </style>
</div>
`;

exports[`chargeKey === rate_basis 1`] = `
<div
  className=" fee_box flex-none layout-row layout-wrap layout-align-center-center"
>
  <div
    className=" flex-none layout-row layout-wrap layout-align-center-start"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="flex-95 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row"
      >
        <div
          className="flex-50 layout-row layout-align-start-center"
        >
          <TextHeading
            color=""
            size={4}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-40 layout-row layout-align-end-center"
        >
          <p
            className="toggle_on flex-none five_m"
          >
            Import
          </p>
          <p />
          <Toggle
            icons={
              Object {
                "checked": <Unknown />,
                "unchecked": <Unknown />,
              }
            }
            onChange={[Function]}
          />
          <p
            className="toggle_off flex-none five_m"
          >
            Export
          </p>
        </div>
        <div
          className="flex-10 layout-row layout-align-end-center"
          onClick={[Function]}
        >
          <i
            className="fa fa-pencil clip flex-none"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-wrap"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="flex-100 layout-row layout-align-none-center layout-wrap expand_panel"
        >
          <div
            className="flex-100 layout-row layout-align-start-center price_subheader"
          >
            <p
              className="flex-none"
            >
              currency
               - 
            </p>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-center"
          >
            <div
              className="flex-25 layout-row layout-align-none-center layout-wrap price_cell"
            >
              <p
                className="flex-100"
              />
              <p
                className="flex"
              >
                RATE_BASIS
                 
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-align-center-center layout-wrap add_hub_fee_panel hub_fee_panel_closed"
    >
      <div
        className="flex-none layout-row layout-align-center-center panel_close"
        onClick={[Function]}
      >
        <i
          className="fa fa-times clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
      <div
        className="flex-90 layout-row layout-wrap layout-align-start-start"
      />
    </div>
  </div>
  <style>
    
      .react-toggle--checked .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          #333 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          #fafafa 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
  </style>
</div>
`;

exports[`state.directionBool is true 1`] = `
<div
  className=" fee_box flex-none layout-row layout-wrap layout-align-center-center"
>
  <div
    className=" flex-none layout-row layout-wrap layout-align-center-start"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="flex-95 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row"
      >
        <div
          className="flex-50 layout-row layout-align-start-center"
        >
          <TextHeading
            color=""
            size={4}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-40 layout-row layout-align-end-center"
        >
          <p
            className="toggle_off flex-none five_m"
          >
            Import
          </p>
          <p />
          <Toggle
            checked={true}
            icons={
              Object {
                "checked": <Unknown />,
                "unchecked": <Unknown />,
              }
            }
            onChange={[Function]}
          />
          <p
            className="toggle_on flex-none five_m"
          >
            Export
          </p>
        </div>
        <div
          className="flex-10 layout-row layout-align-end-center"
          onClick={[Function]}
        >
          <i
            className="fa fa-pencil clip flex-none"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-wrap"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="flex-100 layout-row layout-align-none-center layout-wrap expand_panel"
        >
          <div
            className="flex-100 layout-row layout-align-start-center price_subheader"
          >
            <p
              className="flex-none"
            >
              currency
               - 
            </p>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-center"
          />
        </div>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-align-center-center layout-wrap add_hub_fee_panel hub_fee_panel_closed"
    >
      <div
        className="flex-none layout-row layout-align-center-center panel_close"
        onClick={[Function]}
      >
        <i
          className="fa fa-times clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
      <div
        className="flex-90 layout-row layout-wrap layout-align-start-start"
      />
    </div>
  </div>
  <style>
    
      .react-toggle--checked .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          #333 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          #fafafa 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
  </style>
</div>
`;

exports[`state.edit is true 1`] = `
<div
  className=" fee_box flex-none layout-row layout-wrap layout-align-center-center"
>
  <div
    className=" flex-none layout-row layout-wrap layout-align-center-start"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="flex-95 layout-row layout-wrap layout-align-center-start"
    >
      <div
        className="flex-100 layout-row"
      >
        <div
          className="flex-50 layout-row layout-align-start-center"
        >
          <TextHeading
            color=""
            size={4}
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-40 layout-row layout-align-end-center"
        >
          <p
            className="toggle_on flex-none five_m"
          >
            Import
          </p>
          <p />
          <Toggle
            icons={
              Object {
                "checked": <Unknown />,
                "unchecked": <Unknown />,
              }
            }
            onChange={[Function]}
          />
          <p
            className="toggle_off flex-none five_m"
          >
            Export
          </p>
        </div>
        <div
          className="flex-10 layout-row layout-align-end-center"
          onClick={[Function]}
        >
          <i
            className="fa fa-pencil clip flex-none"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-wrap"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className=" flex-100 layout-row layout-align-none-center layout-wrap"
          key="currency"
        >
          <div
            className="flex-100 layout-row layout-align-space-between-center price_subheader"
          >
            <p
              className="flex-none"
            >
              currency
               - 
            </p>
            <div
              className="flex-none layout-row layout-align-center-center"
              onClick={[Function]}
            >
              <i
                className="fa fa-trash clip"
                style={
                  Object {
                    "background": "-webkit-linear-gradient(left, #333,#fafafa)",
                  }
                }
              />
            </div>
          </div>
          <div
            className="flex-100 layout-row layout-align-start-center"
          >
            <div
              className="flex layout-row layout-align-none-center layout-wrap price_cell"
              key="currency"
            >
              <p
                className="flex-100"
              />
              <div
                className="flex-95 layout-row"
              >
                <NamedSelect
                  className="flex-100"
                  classes="select"
                  name="import-currency-currency"
                  onChange={[Function]}
                  options={
                    Array [
                      Object {
                        "label": "EUR",
                        "value": "EUR",
                      },
                      Object {
                        "label": "AUD",
                        "value": "AUD",
                      },
                      Object {
                        "label": "BGN",
                        "value": "BGN",
                      },
                      Object {
                        "label": "BRL",
                        "value": "BRL",
                      },
                      Object {
                        "label": "CAD",
                        "value": "CAD",
                      },
                      Object {
                        "label": "CHF",
                        "value": "CHF",
                      },
                      Object {
                        "label": "CNY",
                        "value": "CNY",
                      },
                      Object {
                        "label": "CZK",
                        "value": "CZK",
                      },
                      Object {
                        "label": "DKK",
                        "value": "DKK",
                      },
                      Object {
                        "label": "GBP",
                        "value": "GBP",
                      },
                      Object {
                        "label": "HKD",
                        "value": "HKD",
                      },
                      Object {
                        "label": "HRK",
                        "value": "HRK",
                      },
                      Object {
                        "label": "HUF",
                        "value": "HUF",
                      },
                      Object {
                        "label": "IDR",
                        "value": "IDR",
                      },
                      Object {
                        "label": "ILS",
                        "value": "ILS",
                      },
                      Object {
                        "label": "INR",
                        "value": "INR",
                      },
                      Object {
                        "label": "JPY",
                        "value": "JPY",
                      },
                      Object {
                        "label": "KRW",
                        "value": "KRW",
                      },
                      Object {
                        "label": "MXN",
                        "value": "MXN",
                      },
                      Object {
                        "label": "MYR",
                        "value": "MYR",
                      },
                      Object {
                        "label": "NOK",
                        "value": "NOK",
                      },
                      Object {
                        "label": "NZD",
                        "value": "NZD",
                      },
                      Object {
                        "label": "PHP",
                        "value": "PHP",
                      },
                      Object {
                        "label": "PLN",
                        "value": "PLN",
                      },
                      Object {
                        "label": "RON",
                        "value": "RON",
                      },
                      Object {
                        "label": "RUB",
                        "value": "RUB",
                      },
                      Object {
                        "label": "SEK",
                        "value": "SEK",
                      },
                      Object {
                        "label": "SGD",
                        "value": "SGD",
                      },
                      Object {
                        "label": "THB",
                        "value": "THB",
                      },
                      Object {
                        "label": "TRY",
                        "value": "TRY",
                      },
                      Object {
                        "label": "USD",
                        "value": "USD",
                      },
                      Object {
                        "label": "ZAR",
                        "value": "ZAR",
                      },
                    ]
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="flex-100 layout-row layout-align-end-center"
      >
        <div
          className=" flex-50 layout-align-end-center layout-row"
          style={
            Object {
              "margin": "15px",
            }
          }
        >
          <RoundButton
            active={true}
            back={false}
            classNames=""
            disabled={false}
            flexContainer="100"
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass="fa-plus"
            inverse={false}
            size="small"
            text="Add Fee"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <div
          className="flex-50
layout-align-end-center layout-row"
          style={
            Object {
              "margin": "15px",
            }
          }
        >
          <RoundButton
            active={true}
            back={false}
            classNames=""
            disabled={false}
            flexContainer="100"
            handleDisabled={null}
            handleNext={[Function]}
            icon=""
            iconClass="fa-floppy-o"
            inverse={false}
            size="small"
            text="Save"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-align-center-center layout-wrap add_hub_fee_panel hub_fee_panel_closed"
    >
      <div
        className="flex-none layout-row layout-align-center-center panel_close"
        onClick={[Function]}
      >
        <i
          className="fa fa-times clip"
          style={
            Object {
              "background": "-webkit-linear-gradient(left, #333,#fafafa)",
            }
          }
        />
      </div>
      <div
        className="flex-90 layout-row layout-wrap layout-align-start-start"
      />
    </div>
  </div>
  <style>
    
      .react-toggle--checked .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          #333 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle-track {
        background: linear-gradient(
          90deg,
          undefined 0%,
          #fafafa 100%
        ) !important;
        border: 0.5px solid rgba(0, 0, 0, 0);
      }
      .react-toggle:hover .react-toggle-track{
        background: rgba(0, 0, 0, 0.5) !important;
      }
    
  </style>
</div>
`;

exports[`when scope is falsy 1`] = `""`;
